--- a/public/scss/_layout-nav.scss
+++ b/public/scss/_layout-nav.scss
@@ -37,8 +37,20 @@
     -moz-border-radius: 50px;
     border-radius: 50px;
     overflow: hidden;
+
+    @include mediaQuery(max, iPhone){
+      display: block;
+      height: 100%;
+      width: 100%;
+      margin: 0;
+    }
+
     img{
       height: 100%;
+
+      @include mediaQuery(max, iPhone){
+        display: block;
+      }
     }
   }
 
